# jobs-scraper

./: .gitignore  READme.md  pyproject.toml
results/2026-05-09_13-52/: AIG_Data_Engineering_Senior_Associate_cover_letter.txt  AIG_Data_Engineering_Senior_Associate_data.json  AIG_Data_Engineering_Senior_Associate_report.txt  City_of_New_York_Data_Analyst_cover_letter.txt  City_of_New_York_Data_Analyst_data.json  City_of_New_York_Data_Analyst_report.txt  Morgan_Stanley_Associate__Platforms_-_EquityZen_cover_letter.txt  Morgan_Stanley_Associate__Platforms_-_EquityZen_data.json  Morgan_Stanley_Associate__Platforms_-_EquityZen_report.txt  Morgan_Stanley_Associate__Strats_cover_letter.txt  Morgan_Stanley_Associate__Strats_data.json  Morgan_Stanley_Associate__Strats_report.txt  Morgan_Stanley_Data_Engineering_Associate_-_Associate_cover_letter.txt  Morgan_Stanley_Data_Engineering_Associate_-_Associate_data.json  Morgan_Stanley_Data_Engineering_Associate_-_Associate_report.txt  Ogilvy_Health_Senior_Analyst__Marketing_Analytics_cover_letter.txt  Ogilvy_Health_Senior_Analyst__Marketing_Analytics_data.json  Ogilvy_Health_Senior_Analyst__Marketing_Analytics_report.txt  Sanofi_Associate_Statistical_Project_Leader_data.json  Sanofi_Associate_Statistical_Project_Leader_report.txt  Sanofi_PSS_Real_Time_Reporting_Analyst_cover_letter.txt  Sanofi_PSS_Real_Time_Reporting_Analyst_data.json  Sanofi_PSS_Real_Time_Reporting_Analyst_report.txt  Shopee_Product_Data_Analyst_cover_letter.txt  Shopee_Product_Data_Analyst_data.json  Shopee_Product_Data_Analyst_report.txt
(+7423 files in other folders)
